Fix CSD document could display an overlapping between JIRA issue and table (#107)

--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,10 @@ td.content-wrappable table th, td.content-wrappable table td {
   text-align: right;
 }
 
+.align-top {
+  vertical-align:top
+}
+
 .no-border {
   border: none
 }
